feat: [PRIV-100] added trigger authorized for service and all triggers feat: [PRIV-101]added action authorized for service and all action fix: fix a bug with the activation code
