# backend/openapi.yaml
@@ -276,76 +276,121 @@ paths:
       tags:
         - Rules Management
       summary:  Gets a list of available triggers
-      description: Returns a list of triggers offered by services that the user has authorized. The triggers will be grouped by the service that is providing them. The results can be filtered with a search query.
+      description: Returns a list of triggers offered by a specific service. By default it returns all the triggers, with the authorized field set to true, it will return only the triggers that the user has authorized. (the ones that are needed to create a rule)
+
       operationId: triggers
       parameters:
-        - name: search
-          description: Search query that will restrict the result to only triggers whose name or description matches it (NOT YET IMPLEMENTED)
+        - name: serviceId
+          description: The id of the service
           in: query
           schema:
             type: string
+          required: true
+        - name: authorized
+          description: Filters the returned list including only the triggers authorized by the user
+          in: query
+          schema:
+            type: boolean
+          example: true
       responses:
         '200':
-          description: The request was successful
+          description: successful operation
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    serviceName:
-                      type: string
-                      example: SensorService
-                    serviceId:
-                      type: string
-                      example: 025ccd4951hld089ba219okl
-                    triggers:
-                      type: array
-                      items:
-                        $ref: '#/components/schemas/Trigger'
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
+                properties:
+                  _id:
+                    type: string
+                    example: 637e6c0e2677ffe654ea9672
+                  name:
+                    type: string
+                    example: SomeTriggerName
+                  description:
+                    type: string
+                    example: SomeTriggerDescription
+                  serviceId:
+                    type: string
+                    example: 637e6c0e2677ffe654ea9672
+                  permissions:
+                    type: array
+                    items:
+                      properties:
+                        name:
+                          type: string
+                          example: SomePermissionName
+                        _id:
+                          type: string
+                          example: SomePermissionId
+                        description:
+                          type: string
+                          example: SomePermissionDescription
+                  resourceServer:
+                    type: string
+                    example: someUrlToToGetAResource
 
   /actions:
     get:
       tags:
         - Rules Management
       summary: Gets a list of available actions
-      description: Returns a list of actions offered by services that the user has authorized. The actions will be grouped by the service that is providing them. The results can be filtered with a search query.
+      description: Returns a list of actions offered by a specific service. By default it returns all the actions, with the authorized field set to true, it will return only the triggers that the user has authorized. (the ones that are needed to create a rule)
       operationId: actions
       parameters:
-        - name: search
-          description: Search query that will restrict the result to only actions whose name or description matches it (NOT YET IMPLEMENTED)
+        - name: serviceId
+          description: The id of the service
           in: query
           schema:
             type: string
+          required: true
+        - name: authorized
+          description: Filters the returned list including only the actions authorized by the user
+          in: query
+          schema:
+            type: boolean
+          example: true
+        - name: compatible
+          description: Filters the returned list including only the actions authorized by the user [NOT YET IMPLEMENTED]
+          in: query
+          schema:
+            type: boolean
+          example: true
       responses:
         '200':
-          description: The request was successful
+          description: successful operation
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  type: object
                   properties:
-                    serviceName:
+                    _id:
                       type: string
-                      example: NotificationService
+                      example: 637e6c0e2677ffe654ea9672
+                    name:
+                      type: string
+                      example: SomeActionName
+                    description:
+                      type: string
+                      example: SomeActionDescription
                     serviceId:
                       type: string
-                      example: 025ccd4951hld089ba219okl
-                    actions:
+                      example: 637e6c0e2677ffe654ea9672
+                    permissions:
                       type: array
                       items:
-                        $ref: '#/components/schemas/Action'
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
+                        properties:
+                          name:
+                            type: string
+                            example: SomePermissionName
+                          description:
+                            type: string
+                            example: SomePermissionDescription
+                          _id:
+                            type: string
+                            example: SomePermissionId
+                    endpoint:
+                      type: string
+                      example: someUrlToPerformAction
 
   /service-authorization:
     get:
@@ -673,6 +718,9 @@ paths:
                         _id:
                           type: string
                           example: SomePermissionId
+                        description:
+                          type: string
+                          example: SomePermissionDescription
                         associated:
                           type: boolean
                           example: true
@@ -741,6 +789,9 @@ paths:
                         _id:
                           type: string
                           example: SomePermissionId
+                        description:
+                          type: string
+                          example: SomePermissionDescription
                         associated:
                           type: boolean
                           example: true
@@ -825,6 +876,9 @@ paths:
                         name:
                           type: string
                           example: SomePermissionName
+                        description:
+                          type: string
+                          example: SomePermissionDescription
                         _id:
                           type: string
                           example: SomePermissionId
@@ -877,6 +931,9 @@ paths:
                           name:
                             type: string
                             example: SomePermissionName
+                          description:
+                            type: string
+                            example: SomePermissionDescription
                           _id:
                             type: string
                             example: SomePermissionId
@@ -947,6 +1004,9 @@ paths:
                         name:
                           type: string
                           example: SomePermissionName
+                        description:
+                          type: string
+                          example: SomePermissionDescription
                         _id:
                           type: string
                           example: SomePermissionId
@@ -1038,6 +1098,9 @@ paths:
                         _id:
                           type: string
                           example: SomePermissionId
+                        description:
+                          type: string
+                          example: SomePermissionDescription
                         associated:
                           type: boolean
                           example: true
